Sun Aug 26 01:46:56 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/MeshOEMMPopulate.java: Run
	RawStorage.countTriangles() to count triangles from new triangle soup.
	Thanks to Jan Kozusznik for the report.

Sun Aug 12 17:18:01 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/AbstractAlgoHalfEdge.java: Fix
	off-by-one error in processAllHalfEdges(), last edge was not processed.
	* src/org/jcae/mesh/amibe/algos3d/SplitEdge.java: Do not implicitly
	multiply edge length by sqrt(2).  Fix checking of too near vertices.

Sat Aug 11 16:27:04 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/SplitEdge.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Modify main
	class arguments.

Sat Aug 11 02:59:10 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: This class had
	been broken by changes in QSortedTree interface.
	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java: New area() and
	checkNewRingNormals() abstract methods.
	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: Rename
	computeArea() into area().
	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: Works now with
	both HalfEdge and VirtualHalfEdge implementations.

Fri Aug  3 09:14:58 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/bora/xmldata/BModelReader.java
	  src/org/jcae/mesh/bora/xmldata/BModelWriter.java
	  src/org/jcae/mesh/xmldata/jcaebora.dtd: Extend jcaebora.dtd to store
	  constraints used to build current mesh.

Wed Aug  1 17:21:57 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/bora/ds/Hypothesis.java (checkCompatibility):
	Stricter check, FE type must match its argument.
	* src/org/jcae/mesh/bora/ds/Hypothesis.java (combine): This method now
	returns a boolean telling if constraints have been successfully
	combined.