@@ -1,3 +1,8 @@
+Fri Aug 31 12:52:40 CEST 2007 Jan Kozusznik
+
+	* src/org/jcae/mesh/oemm/OEMM.java: New OEMM.Node.getMaxIndex() and
+	OEMM.getDepth() methods.
+
 Sun Aug 26 01:46:56 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/MeshOEMMPopulate.java: Run
